Use bottom:0 instead of height:100% for gmap_wrapper, fixes overflow.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -8,7 +8,7 @@
   top: 138px;
   left: 0px;
   width:100%;
-  height:100%;
+  bottom:0px;
   z-index: -999;
 }
 
